@@ -20,7 +20,6 @@ class Cabinet_Action {
 
     function admin()
     {
-        translate('filecabinet');
         if (!Current_User::allow('filecabinet')){
             Current_User::disallow();
             return;
@@ -305,12 +304,10 @@ class Cabinet_Action {
         $panel->setContent($main);
         $finalPanel = $panel->display();
         Layout::add(PHPWS_ControlPanel::display($finalPanel));
-        translate();
     }
 
     function saveSettings()
     {
-        translate('filecabinet');
         if (empty($_POST['base_doc_directory'])) {
             $errors[] = _('Default document directory may not be blank');
         } elseif (!is_dir($_POST['base_doc_directory'])) {
@@ -332,7 +329,7 @@ class Cabinet_Action {
             $errors[] = _('Unable to read image directory.');
         }
         */
-        translate();
+
         if (isset($errors)) {
             return $errors;
         } else {
@@ -355,7 +352,6 @@ class Cabinet_Action {
 
     function &cpanel()
     {
-        translate('filecabinet');
         PHPWS_Core::initModClass('controlpanel', 'Panel.php');
         $link = 'index.php?module=filecabinet';
 
@@ -372,7 +368,6 @@ class Cabinet_Action {
         $panel->quickSetTabs($tabs);
 
         $panel->setModule('filecabinet');
-        translate();
         return $panel;
     }
 
@@ -388,7 +383,6 @@ class Cabinet_Action {
 
     function viewImage($image)
     {
-        translate('filecabinet');
         $template['TITLE'] = $image->title;
         $template['DESCRIPTION']  = $image->description;
         $template['IMAGE'] = $image->getTag();
@@ -396,7 +390,6 @@ class Cabinet_Action {
 
         $content = PHPWS_Template::process($template, 'filecabinet', 'view.tpl');
         Layout::nakedDisplay($content);
-        translate();
     }
 
     function parseDirectory($directory_list)
@@ -465,7 +458,6 @@ class Cabinet_Action {
 
     function download($id)
     {
-        translate('filecabinet');
         require_once 'HTTP/Download.php';
 
         $document = new PHPWS_Document($id);
@@ -474,14 +466,12 @@ class Cabinet_Action {
                 PHPWS_Error::log($err);
             }
             Layout::add(_('Sorry but this file is inaccessible at this time.'));
-            translate();
             return;
         }
 
         $key = new Key($document->key_id);
         if (!$key->allowView()) {
             Layout::add(_('Sorry, you are not allowed access to this file.'));
-            translate();
             return;
         }
 
@@ -490,7 +480,6 @@ class Cabinet_Action {
         if (!is_file($file_path)) {
             PHPWS_Error::log(FC_DOCUMENT_NOT_FOUND, 'filecabinet', 'Cabinet_Action::download', $file_path);
             Layout::add(_('Sorry but this file is inaccessible at this time.'));
-            translate();
             return;
         }
 
