@@ -96,11 +96,14 @@ class FC_Image_Manager {
 
     function get()
     {
+        translate('filecabinet');
         if (javascriptEnabled()) {
-            return $this->javascript();
+            $result =  $this->javascript();
         } else {
-            return $this->normal();
+            $result =  $this->normal();
         }
+        translate();
+        return $result;
     }
 
     function normal()
@@ -110,9 +113,7 @@ class FC_Image_Manager {
 
     function noImage()
     {
-        translate('filecabinet');
         $no_image = _('No image');
-        translate();
         return sprintf('<img src="%s" width="%s" height="%s" title="%s" alt="%s" />',
                              FC_NONE_IMAGE_SRC, MAX_TN_IMAGE_WIDTH, 
                              MAX_TN_IMAGE_HEIGHT, $no_image, $no_image);
@@ -120,7 +121,6 @@ class FC_Image_Manager {
 
     function javascript()
     {
-        translate('filecabinet');
         if ($this->image->id) {
             $label = $this->thumbnail->getTag();
         } else {
@@ -144,13 +144,11 @@ class FC_Image_Manager {
         $tpl['HIDDEN'] = sprintf('<input type="hidden" id="%s" name="%s" value="%s" />', $this->itemname . '_hidden_value', $this->itemname, $this->image->id);
         $tpl['ITEMNAME'] = $this->itemname;
         $tpl['CLEAR_IMAGE'] = $this->getClearLink();
-        translate();
         return PHPWS_Template::process($tpl, 'filecabinet', 'manager/javascript.tpl');
     }
 
     function getRowTags()
     {
-        translate('filecabinet');
         $vars['image_id'] = $this->image->id;
         $vars['action'] = 'editImage';
         $links[] = PHPWS_Text::secureLink(_('Edit'), 'filecabinet', $vars);
@@ -160,20 +158,17 @@ class FC_Image_Manager {
         $links[] = PHPWS_Text::moduleLink(_('Copy'), 'filecabinet', $vars);
 
         $tpl['ACTION'] = implode(' | ', $links);
-        translate();
         return $tpl;
     }
 
     function getClearLink()
     {
-        translate('filecabinet');
         $js_vars['src']      = FC_NONE_IMAGE_SRC;
         $js_vars['width']    = MAX_TN_IMAGE_WIDTH;
         $js_vars['height']   = MAX_TN_IMAGE_HEIGHT;
         $js_vars['title']    = $js_vars['alt'] = _('No image');
         $js_vars['itemname'] = $this->itemname;
         $js_vars['label']    = _('Clear image');
-        translate();
         return javascript('modules/filecabinet/clear_image', $js_vars);
     }
 
@@ -190,9 +185,7 @@ class FC_Image_Manager {
         $vars['width']   = FC_UPLOAD_WIDTH;
         $vars['height']  = FC_UPLOAD_HEIGHT;
 
-        translate('filecabinet');
         $vars['label']   = _('Change Thumbnail');
-        translate();
         return javascript('open_window', $vars);
     }
 
@@ -219,9 +212,7 @@ class FC_Image_Manager {
 
     function noThumbnail()
     {
-        translate('filecabinet');
         $no_thumb = _('No thumbnail');
-        translate();
         return sprintf('<img title="%s" alt="%s" src="images/mod/filecabinet/no_thumbnail.png" />',
                        $no_thumb, $no_thumb);
     }
@@ -235,9 +226,7 @@ class FC_Image_Manager {
         $vars['address'] = $this->getLinkAddress('filecabinet', $link_vars);
         $vars['width']   = FC_UPLOAD_WIDTH;
         $vars['height']  = FC_UPLOAD_HEIGHT;
-        translate('filecabinet');
         $vars['label']   = _('Upload image');
-        translate();
         return javascript('open_window', $vars);
     }
 
@@ -254,7 +243,6 @@ class FC_Image_Manager {
     }
 
     function errorPost() {
-        translate('filecabinet');
         exit(_('An error occurred when trying to save your image.'));
     }
 
@@ -318,7 +306,6 @@ class FC_Image_Manager {
         $form->setSize('file_name', 30);
         $form->setMaxFileSize($this->image->_max_size);
 
-        translate('filecabinet');
         $form->setLabel('file_name', _('Image location'));
 
         $form->addText('title', $this->image->title);
@@ -370,7 +357,6 @@ class FC_Image_Manager {
         $template['MAX_SIZE']         = $this->image->_max_size;
         $template['MAX_WIDTH']        = $this->image->_max_width;
         $template['MAX_HEIGHT']       = $this->image->_max_height;
-        translate();
         return PHPWS_Template::process($template, 'filecabinet', 'image_edit.tpl');
     }
 
@@ -419,7 +405,6 @@ class FC_Image_Manager {
         $db->setIndexBy('id');
         $source_images = $db->getObjects('PHPWS_Image');
 
-        translate('filecabinet');
         if (empty($thumbnails)) {
             $tpl['MESSAGE'] = _('No images found.');
         } else {
@@ -473,13 +458,11 @@ class FC_Image_Manager {
         $tpl['DELETE'] = _('Delete');
         $content = PHPWS_Template::process($tpl, 'filecabinet', 'manager/pick.tpl');
 
-        translate();
         return $content;
     }
 
     function navigateDirectories($current_directory)
     {
-        translate('filecabinet');
         $directory = PHPWS_HOME_DIR . 'images';
         $directories = PHPWS_File::readDirectory($directory, true, false, true);
 
@@ -524,7 +507,6 @@ class FC_Image_Manager {
 
             $pointer_a = & $pointer_b[$foo];
         }
-        translate();
         return $tpl->get();
     }
 
